labgeeks/static/css/calendar.less
#calendar {
    margin: auto;
    margin-top: 1em;

    tr:first-child {
        background-color: @insetBackground;
        font-size: 2.0em;
    }
    
    tr:nth-child(2) {
        background-color: @background;
        font-size: 1em;
    }
    
    th.month, tr:nth-child(2) th{
        height: 2em;
        border-top: 1px solid black;
        border-left: 0;
    }

    .first{
        background-color: @scale11;
    }

    .second{
        background-color: @scale21;
    }

    .first.filled{
        background-color: @scale12;
    }

    .second.filled{
        background-color: @scale22;
    }

    .today{
        border: .2em solid @highlight;
    }

    .noday{
        background-color: @background;
        border: none;
        border-top: 1px solid @border;
    }
    th, td {
        width: 5em;
        height: 5em;
        padding: .5em;
        border-left: 1px solid @background;
        border-top: 1px solid @background;
        border-right: 0;
        vertical-align: text-top;
    }
    @media only screen and (min-width: @tablet_portrait) {
        th, td {
            height: 5em;
        }
        td .long {
            display: inline;
        }
    }
    p{
        font-size: .9em;
    }
    strong.hours{
        color:black;
    }
}

#calendar_nav {
    display: block;
    text-align: center;
    @media only screen and (min-width: @tablet_portrait) {
        a {
            margin-left: 0.5em;
            margin-right: 0.5em;
        }
    }
}

#calendar_key {
    padding: 15px;
    border: 1px solid @grayLight;

    .key {
        height: 5em;
        max-width: 5em;
        float: left;
        text-align: center;
        margin: auto;
        padding: 3px;
    }
    div {
        overflow: hidden;
    }
    .text {
        float: left;
        margin-right: 2em;
        padding-bottom: 1em;
    }

    //not tiny
    @media only screen and (min-width: @screen-md-min) {
        float: left;
        margin: 0 12px 0;
        .key {
            padding: 10px;
            height: auto;
            float: none;
        }
    }

    @media (min-width: @screen-md-min) {
        max-width: 20em;
    }

    strong {
        font-weight: bold;
    }

    p {
        font-size: 11pt;
    }

    legend {
        font-size: 14pt;
    }
}

table.month {
    @media only screen and (min-width: @tablet_portrait) {
        width: 40em;
    }
}

.month{
    margin: .55em 0 0;
    a {
        color: @background;
    }
}


.separator{
    height: .3em;
    background-color: white;
}

